--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      console.log('test');
+    </script>
     <title>Not Found</title>
   </head>
   <body>
